# Unknown-Language-AI

./: .gitignore  pyproject.toml
data/: playbook.json
src/realtime_speech_coach.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/speech_coach/: app.py  audio.py  config.py  models.py  playbook.py  suggestions.py  transcriber.py  ui.py
